[gd_scene load_steps=8 format=2]

[ext_resource path="res://texture/tabletops/basic.jpg" type="Texture" id=1]
[ext_resource path="res://texture/boards/clean.png" type="Texture" id=2]
[ext_resource path="res://scenes/main_scene/UI_Selector.gd" type="Script" id=3]
[ext_resource path="res://scenes/main_scene/Board.gd" type="Script" id=4]
[ext_resource path="res://scenes/main_scene/main.gd" type="Script" id=5]
[ext_resource path="res://texture/ui/basic.png" type="Texture" id=6]
[ext_resource path="res://scenes/main_scene/UI.gd" type="Script" id=7]

[node name="Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 682.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 682.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Node2D" parent="."]
scale = Vector2( 0.183, 0.183 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Board"]
margin_right = 512.0
margin_bottom = 512.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="Board"]
layer = 2
offset = Vector2( 256, 44 )
transform = Transform2D( 1, 0, 0, 1, 256, 44 )
script = ExtResource( 7 )

[node name="SelectorMain" type="Node2D" parent="Board/UI"]
visible = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Board/UI/SelectorMain"]
texture = ExtResource( 6 )
hframes = 3

[node name="Selector1" type="Node2D" parent="Board/UI"]
visible = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Board/UI/Selector1"]
texture = ExtResource( 6 )
hframes = 3

[node name="Selector2" type="Node2D" parent="Board/UI"]
visible = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Board/UI/Selector2"]
texture = ExtResource( 6 )
hframes = 3
